cros-ide: syntax for instance stanza in upstart.
See https://upstart.ubuntu.com/cookbook/#instance for details.

BUG=b:230052562
TEST=https://screenshot.googleplex.com/8RLuiepix59Ln7f.png
TEST=vscode-tmgrammar-test -g upstart.tmLanguage.json
upstart-syntax-test.conf

Change-Id: I03e48a8f83dff7f073d234b34290d3476519ebe2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3653881
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/languages/upstart.tmLanguage.json
+++ b/cros-ide/languages/upstart.tmLanguage.json
@@ -20,7 +20,8 @@
     { "include": "#limit" },
     { "include": "#nice" },
     { "include": "#oom-score" },
-    { "include": "#umask" }
+    { "include": "#umask" },
+    { "include": "#instance" }
   ],
   "repository": {
     "comment": {
@@ -213,6 +214,14 @@
     "umask": {
       "match": "^umask",
       "name": "keyword.other.umask.upstart"
+    },
+    "instance": {
+      "match": "^(instance) (\\$\\S+)",
+      "name": "meta.instance.upstart",
+      "captures": {
+        "1": { "name": "keyword.other.instance.upstart" },
+        "2": { "name": "variable.other.instance.upstart" }
+      }
     }
   }
 }
